--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-06-30  hwpplayer1  <hwpplayer1@debian>
+
+	* src/if_statement.cpp: if statement explained/code written
+
 2024-06-24  hwpplayer1  <hwpplayer1@debian>
 
 	* src/for_example_2.cpp: another for example 
