--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2024-07-01  hwpplayer1  <hwpplayer1@debian>
 
-	* src/local_j.cpp: local j value test code 
+	* src/local_j.cpp: local j value test code / 2.3. Compound Types page Page 82  
 
 2024-06-30  hwpplayer1  <hwpplayer1@debian>
 
